ash-code/tui/src/app/fullscreen/snapshots/app__fullscreen__modal__tests__status_modal_processes.snap
---
source: ash-code/tui/src/app/fullscreen/modal_tests.rs
expression: frame_text(&app)
---
  .                                                                            [— / —] [Dashboard]  
                                                                                                    
                                                                                                    
            ┌── Status ───────────────────────────────────────────────────────────[✗]─┐             
            │                                                                         │             
            │   Thread    Processes                                                   │             
            │                                                                         │             
            │  Memory diagnostics:          Disabled                                  │             
            │  Local total resident memory: collecting                                │             
            │  Local observed peak:         collecting                                │             
            │  Local total CPU:             collecting                                │             
            │  1 minute memory change:      collecting                                │             
            │  5 minute memory change:      collecting                                │             
            │  TUI resident memory:         collecting                                │             
            │  TUI CPU:                     collecting                                │             
            │  App Server:                  included in the TUI process               │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
            │                                                                         │             
  ╭─────────│  Tab to switch · Esc to close                                           │──────────╮  
  │ > Build └─────────────────────────────────────────────────────────────────────────┘          │  
  ╰──────────────────────────────────────────────────────────────────────────── Automatic model ─╯
